--- a/.azure/pipelines/jobs/default-build.yml
+++ b/.azure/pipelines/jobs/default-build.yml
@@ -116,7 +116,6 @@ jobs:
       displayName: Install JDK 11
     - task: NuGetCommand@2
       displayName: 'Clear NuGet caches'
-      condition: succeeded()
       inputs:
         command: custom
         arguments: 'locals all -clear'
@@ -161,19 +160,19 @@ jobs:
     - script: eng/scripts/KillProcesses.sh
       displayName: Kill processes
       condition: always()
-  - task: PublishTestResults@2
-    displayName: Publish test results
-    condition: always()
-    continueOnError: true
-    inputs:
-      testRunTitle: $(AgentOsName)-$(BuildConfiguration)
-      testRunner: vstest
-      testResultsFiles: 'artifacts/logs/**/*.trx'
-      mergeTestResults: true
-  - ${{ if eq(parameters.artifacts.publish, 'true') }}:
+  - ${{ if ne(parameters.variables.PB_SKIPTESTS, 'true') }}:
+    - task: PublishTestResults@2
+      displayName: Publish test results
+      condition: always()
+      continueOnError: true
+      inputs:
+        testRunTitle: $(AgentOsName)-$(BuildConfiguration)
+        testRunner: vstest
+        testResultsFiles: 'artifacts/logs/**/*.trx'
+        mergeTestResults: true
+  - ${{ if and(eq(parameters.artifacts.publish, 'true'), eq(variables['system.pullrequest.isfork'], false)) }}:
     - task: PublishBuildArtifacts@1
       displayName: Upload artifacts
-      condition: eq(variables['system.pullrequest.isfork'], false)
       continueOnError: true
       inputs:
         ${{ if eq(parameters.buildDirectory, '') }}:
