--- a/src/Servers/IIS/IIS/test/testassets/InProcessNewShimWebSite/InProcessNewShimWebSite.csproj
+++ b/src/Servers/IIS/IIS/test/testassets/InProcessNewShimWebSite/InProcessNewShimWebSite.csproj
@@ -59,4 +59,9 @@
     </PackageReference>
     <Reference Include="xunit.assert" />
   </ItemGroup>
+
+  <!-- Repeat Build target for win-x64 to allow later Publish w/ NoBuild=true. -->
+  <Target Name="BuildX64" BeforeTargets="Build" Condition=" '$(RuntimeIdentifier)' != 'win-x64' ">
+    <MSBuild Projects="$(MSBuildProjectFullPath)" Properties="RuntimeIdentifier=win-x64" Targets="Build" />
+  </Target>
 </Project>
