--- a/src/Servers/IIS/IIS/test/testassets/InProcessWebSite/InProcessWebSite.csproj
+++ b/src/Servers/IIS/IIS/test/testassets/InProcessWebSite/InProcessWebSite.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <Import Project="..\..\..\..\build\testsite.props" />
 
   <PropertyGroup>
@@ -32,4 +31,8 @@
     <Reference Include="xunit.assert" />
   </ItemGroup>
 
+  <!-- Repeat Build target for win-x64 to allow later Publish w/ NoBuild=true. -->
+  <Target Name="BuildX64" BeforeTargets="Build" Condition=" '$(RuntimeIdentifier)' != 'win-x64' ">
+    <MSBuild Projects="$(MSBuildProjectFullPath)" Properties="RuntimeIdentifier=win-x64" Targets="Build" />
+  </Target>
 </Project>
